Enum "lezione_stato_enum" {
  "prenotata"
  "confermata"
  "svolta"
  "annullata"
  "no_show"
}

Enum "lezione_luogo_enum" {
  "remoto"
  "presenza"
}

Enum "lezione_partecipante_presenza_enum" {
  "previsto"
  "presente"
  "assente"
  "no_show"
}

Enum "lezione_stato_storia_da_stato_enum" {
  "prenotata"
  "confermata"
  "svolta"
  "annullata"
  "no_show"
}

Enum "lezione_stato_storia_a_stato_enum" {
  "prenotata"
  "confermata"
  "svolta"
  "annullata"
  "no_show"
}

Enum "pagamento_metodo_enum" {
  "contanti"
  "bonifico"
  "carta"
  "paypal"
  "altro"
}

Enum "pagamento_stato_enum" {
  "creato"
  "autorizzato"
  "pagato"
  "rimborsato"
  "fallito"
  "annullato"
}

Enum "utente_note_tipo_enum" {
  "pagamento"
  "profilo"
  "altro"
}

Table "paese" {
  "id" BIGINT [pk, not null, increment]
  "nome" VARCHAR(100) [not null]
  "iso2" CHAR(2) [not null]
  "iso3" CHAR(3)
  "iso_numeric" CHAR(3)
  "attivo" TINYINT(1) [not null, default: 1]
  "created_at" TIMESTAMP [not null, default: `CURRENT_TIMESTAMP`]
  "updated_at" TIMESTAMP [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    iso2 [unique, name: "uq_paese_iso2"]
    nome [unique, name: "uq_paese_nome"]
  }
}

Table "utente" {
  "id" BIGINT [pk, not null, increment]
  "username" VARCHAR(64) [not null]
  "email" VARCHAR(254) [not null]
  "password_hash" VARCHAR(255) [not null]
  "nome" VARCHAR(100) [not null]
  "cognome" VARCHAR(100) [not null]
  "cf" CHAR(16)
  "telefono" VARCHAR(30)
  "data_nascita" DATE
  "iban" VARCHAR(50)
  "citta" VARCHAR(120)
  "indirizzo" VARCHAR(255)
  "cap" VARCHAR(10)
  "paese" CHAR(2)
  "attivo" TINYINT(1) [not null, default: 1]
  "last_login_at" DATETIME
  "created_at" DATETIME [not null, default: `CURRENT_TIMESTAMP`]
  "updated_at" DATETIME [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    username [unique, name: "uq_utente_username"]
    email [unique, name: "uq_utente_email"]
    cf [unique, name: "uq_utente_cf"]
    (cognome, nome) [name: "idx_utente_cognome_nome"]
  }
}

Table "ruolo" {
  "id" SMALLINT [pk, not null, increment]
  "nome" VARCHAR(50) [not null]
  "descrizione" VARCHAR(255)

  Indexes {
    nome [unique, name: "uq_ruolo_nome"]
  }
}

Table "permesso" {
  "id" SMALLINT [pk, not null, increment]
  "codice" VARCHAR(50) [not null]
  "descrizione" VARCHAR(255)

  Indexes {
    codice [unique, name: "uq_permesso_codice"]
  }
}

Table "utente_ruolo" {
  "utente_id" BIGINT [not null]
  "ruolo_id" SMALLINT [not null]
  "assegnato_at" DATETIME [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    (utente_id, ruolo_id) [pk]
    ruolo_id [name: "idx_ur_ruolo"]
  }
}

Table "ruolo_permesso" {
  "ruolo_id" SMALLINT [not null]
  "permesso_id" SMALLINT [not null]

  Indexes {
    (ruolo_id, permesso_id) [pk]
    permesso_id [name: "idx_rp_permesso"]
  }
}

Table "materia" {
  "id" BIGINT [pk, not null, increment]
  "nome" VARCHAR(200) [not null]
  "descrizione" TEXT

  Indexes {
    nome [unique, name: "uq_materia_nome"]
  }
}

Table "tutor_materia" {
  "tutor_id" BIGINT [not null]
  "materia_id" BIGINT [not null]
  "prezzo_orario" DECIMAL(10,2)
  "valuta" CHAR(3) [not null, default: 'EUR']

  Indexes {
    (tutor_id, materia_id) [pk]
    materia_id [name: "idx_tm_materia"]
  }
}

Table "sessione" {
  "token" varchar(128) [pk]
  "utente_id" bigint
  "created_at" datetime
  "last_seen_at" datetime
  "expires_at" datetime

  Indexes {
    utente_id [unique, name: "uq_sessione_utente_id"]
  }
}

Table "studente" {
  "id" BIGINT [pk, not null, increment]
  "tutor_id" BIGINT [not null]
  "nome" VARCHAR(100) [not null]
  "cognome" VARCHAR(100) [not null]
  "email" VARCHAR(254)
  "telefono" VARCHAR(30)
  "cf" CHAR(16)
  "data_nascita" DATE
  "citta" VARCHAR(120)
  "indirizzo" VARCHAR(255)
  "cap" VARCHAR(10)
  "paese" CHAR(2)
  "pagante_nome" VARCHAR(100)
  "pagante_cognome" VARCHAR(100)
  "pagante_cf" VARCHAR(16)
  "pagante_email" VARCHAR(254)
  "pagante_telefono" VARCHAR(30)
  "pagante_indirizzo" VARCHAR(255)
  "attivo" TINYINT(1) [not null, default: 1]
  "created_at" DATETIME [not null, default: `CURRENT_TIMESTAMP`]
  "updated_at" DATETIME [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    tutor_id [name: "idx_studente_tutor"]
    (cognome, nome) [name: "idx_studente_cognome_nome"]
    (tutor_id, email) [unique, name: "uq_studente_tutor_email"]
    (tutor_id, cf) [unique, name: "uq_studente_tutor_cf"]
  }
}

Table "lezione" {
  "id" BIGINT [pk, not null, increment]
  "tutor_id" BIGINT [not null]
  "materia_id" BIGINT [not null]
  "argomento_id" BIGINT
  "data_inizio" DATETIME [not null]
  "data_fine" DATETIME [not null]
  "timezone" VARCHAR(50) [not null, default: 'Europe/Rome']
  "stato" lezione_stato_enum [not null, default: 'prenotata']
  "prezzo" DECIMAL(10,2)
  "valuta" CHAR(3) [not null, default: 'EUR']
  "argomento" TEXT
  "note" TEXT
  "note_private" TEXT
  "luogo" lezione_luogo_enum [not null, default: 'remoto']
  "created_at" DATETIME [not null, default: `CURRENT_TIMESTAMP`]
  "updated_at" DATETIME [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    (tutor_id, data_inizio) [name: "idx_lezione_tutor_data"]
    materia_id [name: "idx_lezione_materia"]
    stato [name: "idx_lezione_stato"]
  }
}

Table "lezione_partecipante" {
  "lezione_id" BIGINT [not null]
  "studente_id" BIGINT [not null]
  "presenza" lezione_partecipante_presenza_enum [not null, default: 'previsto']
  "note" TEXT

  Indexes {
    (lezione_id, studente_id) [pk]
    studente_id [name: "idx_lp_studente"]
  }
}

Table "lezione_stato_storia" {
  "id" BIGINT [pk, not null, increment]
  "lezione_id" BIGINT [not null]
  "da_stato" lezione_stato_storia_da_stato_enum
  "a_stato" lezione_stato_storia_a_stato_enum [not null]
  "cambiato_da" BIGINT
  "cambiato_at" DATETIME [not null, default: `CURRENT_TIMESTAMP`]
  "motivo" VARCHAR(255)

  Indexes {
    lezione_id [name: "idx_lss_lezione"]
    cambiato_da [name: "idx_lss_cambiato_da"]
  }
}

Table "pagamento" {
  "id" BIGINT [pk, not null, increment]
  "lezione_id" BIGINT
  "studente_id" BIGINT [not null]
  "tutor_id" BIGINT
  "importo" DECIMAL(10,2) [not null]
  "valuta" CHAR(3) [not null, default: 'EUR']
  "metodo" pagamento_metodo_enum [not null, default: 'altro']
  "stato" pagamento_stato_enum [not null, default: 'creato']
  "riferimento_esterno" VARCHAR(255)
  "note" TEXT
  "pagato_at" DATETIME
  "created_at" DATETIME [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    lezione_id [name: "idx_pag_lezione"]
    studente_id [name: "idx_pag_studente"]
    tutor_id [name: "idx_pag_tutor"]
    stato [name: "idx_pag_stato"]
    (tutor_id, studente_id) [name: "idx_pag_tutor_studente"]
  }
}

Table "utente_note" {
  "id" BIGINT [pk, not null, increment]
  "utente_id" BIGINT [not null]
  "tipo" utente_note_tipo_enum [not null, default: 'altro']
  "testo" TEXT [not null]
  "creato_da" BIGINT
  "created_at" DATETIME [not null, default: `CURRENT_TIMESTAMP`]

  Indexes {
    utente_id [name: "idx_un_utente"]
    creato_da [name: "idx_un_creato_da"]
  }
}

Table "event_log" {
  "id" BIGINT [pk, increment]
  "event_name" VARCHAR(128) [not null]
  "ran_at" DATETIME [not null, default: `CURRENT_TIMESTAMP`]
  "note" VARCHAR(255)
}

Ref "fk_ur_utente":"utente"."id" < "utente_ruolo"."utente_id" [delete: cascade]

Ref "fk_ur_ruolo":"ruolo"."id" < "utente_ruolo"."ruolo_id" [delete: cascade]

Ref "fk_rp_ruolo":"ruolo"."id" < "ruolo_permesso"."ruolo_id" [delete: cascade]

Ref "fk_rp_permesso":"permesso"."id" < "ruolo_permesso"."permesso_id" [delete: cascade]

Ref "fk_tm_tutor":"utente"."id" < "tutor_materia"."tutor_id" [delete: cascade]

Ref "fk_tm_materia":"materia"."id" < "tutor_materia"."materia_id" [delete: cascade]

Ref "fk_sessione_utente":"utente"."id" < "sessione"."utente_id" [update: cascade, delete: cascade]

Ref "fk_studente_tutor":"utente"."id" < "studente"."tutor_id" [delete: cascade]

Ref "fk_lezione_tutor":"utente"."id" < "lezione"."tutor_id" [delete: restrict]

Ref "fk_lezione_materia":"materia"."id" < "lezione"."materia_id" [delete: restrict]

Ref "fk_lp_lezione":"lezione"."id" < "lezione_partecipante"."lezione_id" [delete: cascade]

Ref "fk_lp_studente":"studente"."id" < "lezione_partecipante"."studente_id" [delete: restrict]

Ref "fk_lss_lezione":"lezione"."id" < "lezione_stato_storia"."lezione_id" [delete: cascade]

Ref "fk_lss_cambiato_da":"utente"."id" < "lezione_stato_storia"."cambiato_da" [delete: set null]

Ref "fk_pag_lezione":"lezione"."id" < "pagamento"."lezione_id" [delete: set null]

Ref "fk_pag_studente":"studente"."id" < "pagamento"."studente_id" [delete: restrict]

Ref "fk_pag_tutor":"utente"."id" < "pagamento"."tutor_id" [delete: set null]

Ref "fk_un_utente":"utente"."id" < "utente_note"."utente_id" [delete: cascade]

Ref "fk_un_creato_da":"utente"."id" < "utente_note"."creato_da" [delete: set null]
